# tglfnn-ukaea

./: .gitignore  README.md  pyproject.toml
JETTO-TGLF-EM-17Feb25/: regressor_efe_gb.pt  regressor_efi_gb.pt  regressor_pfi_gb.pt
MultiMachineHyper_1Aug25/: README.md  checkpoint.pt  config.yaml  regressor_efe_gb.pt  regressor_efe_gb_onnx.onnx  regressor_efe_gb_torchscript.pt  regressor_efi_gb.pt  regressor_efi_gb_onnx.onnx  regressor_efi_gb_torchscript.pt  regressor_pfe_gb.pt  regressor_pfe_gb_onnx.onnx  regressor_pfe_gb_torchscript.pt  regressor_pfi_gb.pt  regressor_pfi_gb_onnx.onnx  regressor_pfi_gb_torchscript.pt  stats.json
tglfnn_ukaea/: __init__.py  loader.py
